--- a/happytails/docker-compose.yml
+++ b/happytails/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  # PostgreSQL Database
   postgres:
-    build:
-      context: .
-      dockerfile: Dockerfile.postgres
-    image: happytails-postgres:latest
+    image: postgres:15-alpine
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=happytails
+      - POSTGRES_USER=happytails
+      - POSTGRES_PASSWORD=happytails123
+    configs:
+      - source: db_init_script
+        target: /docker-entrypoint-initdb.d/init-databases.sh
+        mode: 0755
     volumes:
       - postgres-data-new:/var/lib/postgresql/data
     networks:
@@ -19,21 +19,16 @@ services:
       replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
-      placement:
-        constraints:
-          - node.role == manager
 
   keycloak:
     image: quay.io/keycloak/keycloak:latest
     environment:
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${KEYCLOAK_DB_NAME}
-      KC_DB_USERNAME: ${KEYCLOAK_DB_USER}
-      KC_DB_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
-      KEYCLOAK_ADMIN: ${KEYCLOAK_ADMIN}
-      KEYCLOAK_ADMIN_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: keycloak_password
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
       KC_HOSTNAME_STRICT: "false"
       KC_HOSTNAME_STRICT_HTTPS: "false"
       KC_HTTP_ENABLED: "true"
@@ -55,37 +50,29 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DEBUG=${DEBUG}
-      - SECRET_KEY=${SECRET_KEY}
+      - DEBUG=1
+      - SECRET_KEY=django-insecure-i8)8x40o(f&h5r0vbur#n&1g5sooyjpc-f8f^4%0^ws1#rvgvq
       - DB_ENGINE=postgresql
-      - DB_NAME=${POSTGRES_DB}
-      - DB_USER=${POSTGRES_USER}
-      - DB_PASSWORD=${POSTGRES_PASSWORD}
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      # Keycloak OIDC Configuration
-      - OIDC_RP_CLIENT_ID=${OIDC_RP_CLIENT_ID}
-      - OIDC_RP_CLIENT_SECRET=${OIDC_RP_CLIENT_SECRET}
-      - OIDC_OP_AUTHORIZATION_ENDPOINT=${OIDC_OP_AUTHORIZATION_ENDPOINT}
-      - OIDC_OP_TOKEN_ENDPOINT=${OIDC_OP_TOKEN_ENDPOINT}
-      - OIDC_OP_USER_ENDPOINT=${OIDC_OP_USER_ENDPOINT}
-      - OIDC_OP_JWKS_ENDPOINT=${OIDC_OP_JWKS_ENDPOINT}
-      - OIDC_OP_LOGOUT_ENDPOINT=${OIDC_OP_LOGOUT_ENDPOINT}
+      - DB_NAME=happytails
+      - DB_USER=happytails
+      - DB_PASSWORD=happytails123
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - OIDC_RP_CLIENT_ID=project-client
+      - OIDC_RP_CLIENT_SECRET=QUMf2W089NKFq4UaykDkL9gAuH9H36Ke
+      - OIDC_OP_AUTHORIZATION_ENDPOINT=http://localhost:8080/realms/project-realm/protocol/openid-connect/auth
+      - OIDC_OP_TOKEN_ENDPOINT=http://keycloak:8080/realms/project-realm/protocol/openid-connect/token
+      - OIDC_OP_USER_ENDPOINT=http://keycloak:8080/realms/project-realm/protocol/openid-connect/userinfo
+      - OIDC_OP_JWKS_ENDPOINT=http://keycloak:8080/realms/project-realm/protocol/openid-connect/certs
+      - OIDC_OP_LOGOUT_ENDPOINT=http://localhost:8080/realms/project-realm/protocol/openid-connect/logout
     networks:
       - happytails-network
     volumes:
       - .:/app
     deploy:
-      replicas: 2
+      replicas: 1
       restart_policy:
         condition: on-failure
-        delay: 5s
-        max_attempts: 3
-      update_config:
-        parallelism: 1
-        delay: 10s
-      placement:
-        max_replicas_per_node: 2
     depends_on:
       - postgres
       - keycloak
@@ -97,5 +84,7 @@ networks:
 
 volumes:
   postgres-data-new:
-  
-  
+
+configs:
+  db_init_script:
+    file: ./init-databases.sh
